[package]
name = "relm4-icons"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
version = "0.9.0"
edition = "2021"
rust-version = "1.75"
readme = "README.md"
license = "Apache-2.0 OR MIT"
description = "Icons for gtk-rs and Relm4 applications"

homepage = "https://relm4.org"
repository = "https://github.com/Relm4/icons"

keywords = ["gui", "gtk", "gtk4", "elm"]
categories = ["gui"]

[workspace]
members = ["update_icons"]

[dependencies]
gtk = { version = "0.9", package = "gtk4" }

[build-dependencies]
gvdb = { version = "0.6.1", features = ["gresource"] }
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.14"

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

all = []
# Enable entire icon kits
icon-development-kit = []
fluent-system-icons = []
