[workspace]
resolver = "2"
members = ["update_icons", "build_icons"]

[workspace.package]
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>"]
version = "0.10.1"
edition = "2021"
rust-version = "1.75"
license = "(Apache-2.0 OR MIT) AND CC0-1.0 AND MIT"
description = "Icons for gtk-rs and Relm4 applications"

homepage = "https://relm4.org"
repository = "https://github.com/Relm4/icons"

keywords = ["gui", "gtk", "gtk4", "elm"]
categories = ["gui"]

[package]
name = "relm4-icons"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

readme = "README.md"

homepage.workspace = true
repository.workspace = true

keywords.workspace = true
categories.workspace = true

# Don't ship submodules
exclude = ["source/"]

[dependencies]
gtk = { version = "0.11", package = "gtk4" }

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

all = []
# Enable entire icon kits
icon-development-kit-www = []
fluent-system-icons = []
icon-development-kit = []
