[package]
name = "relm4-icons-build"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

readme = "README.md"

homepage.workspace = true
repository.workspace = true

keywords.workspace = true
categories.workspace = true

[dependencies]
gvdb = { version = "0.7.1", features = ["gresource"] }
serde = { version = "1.0.215", features = ["derive"] }
toml = { version = "0.8.19" }
