[package]
name = "relm4-icons-build"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

readme = "README.md"

homepage.workspace = true
repository.workspace = true

keywords.workspace = true
categories.workspace = true

[dependencies]
gvdb = { version = "0.9.0", features = ["gresource"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "1.0.1" }
walkdir = "2.5.0"
